# niwashi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  readme.md
.devcontainer/: devcontainer.json  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
http/: Cargo.toml
http/src/: jwt.rs  main.rs
jwt/: Cargo.toml
jwt/src/: errors.rs  lib.rs
life/: Cargo.toml
life/src/: destroy.rs  lib.rs  mutation.rs  validation.rs
life/src/destroy/: destroy_function.rs  fragile.rs
life/src/mutation/: mutable.rs  mutation_function.rs
life/src/validation/: introspective.rs  stop_growing.rs  validation_function.rs
postgres/: .env  Cargo.toml
postgres/migrations/: 20240204061020_new_sessions.sql
postgres/src/: lib.rs
session/: Cargo.toml
session/src/: death.rs  lib.rs  pool.rs  transions.rs  validations.rs
