[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
session = {path = "../session"}
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "chrono" ] }
tokio = { version = "1.20.0", features = ["rt", "macros", "rt-multi-thread"]}
uuid = { version = "1.7.0", features = ["fast-rng", "v4", "serde"] }
